[build-system]
requires = [
    # See https://github.com/pypa/cibuildwheel/issues/2015 for the reason this
    # version is required.
    "setuptools==72.1.0",
]
build-backend = "setuptools.build_meta"

[dependency-groups]
docs = ["furo~=2024.8", "myst-parser~=4.0"]

[project]
name = "pysorteddict"
version = "0.13.0rc0"
authors = [
    {name = "Vishal Pankaj Chandratreya"},
]
description = "Python dictionary in which the keys are always in ascending order"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.optional-dependencies]
cov = ["gcovr", "pytest-xdist"]

[project.urls]
Homepage = "https://tfpf.github.io/pysorteddict/"
Documentation = "https://tfpf.github.io/pysorteddict/documentation.html"
Repository = "https://github.com/tfpf/pysorteddict"
Changelog = "https://tfpf.github.io/pysorteddict/changelog.html"

[tool.cibuildwheel]
archs = ["auto64"]
build-verbosity = 1
enable = ["pypy"]
test-command = "pytest {package}"
test-requires = ["pytest-xdist"]

[tool.hatch.envs.default]
dev-mode = false

[tool.hatch.envs.cov]
detached = true
features = ["cov"]

[tool.hatch.envs.cov.env-vars]
CFLAGS = "--coverage"

[tool.hatch.envs.cov.scripts]
cov = [
    "rm -fr build/ cov/ && pip install . && pytest",
    "mkdir -p cov/ && gcovr --html-details cov/index.html",
]

[tool.hatch.envs.docs]
detached = true

[tool.hatch.envs.docs.scripts]
# Building the documentation does not require installing this project, but does
# require some dependencies. I can't figure out a way to get Hatch to only
# install those dependencies without repeating them here. Hence, install them
# in this environment manually from the dependency group. Otherwise, the below
# command will fail.
docs = "sphinx-build docs/ docs/_build/"

[tool.pytest.ini_options]
addopts = "--dist=worksteal -n logical"

[tool.ruff]
extend-exclude = ["tests/performance/"]
line-length = 119

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = ["A001", "INP001"]
"examples/*" = ["S101", "T201"]
"tests/functional/*" = ["S101", "S311"]

[tool.setuptools]
include-package-data = false
